--- a/frontend/Login_UI.form
+++ b/frontend/Login_UI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Login_UI">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="50" vgap="10">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="frontend.Login_UI">
+  <grid id="27dc6" binding="LoginPanel" layout-manager="GridLayoutManager" row-count="2" column-count="10" same-size-horizontally="false" same-size-vertically="false" hgap="50" vgap="10">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="100" width="474" height="412"/>
+      <xy x="20" y="100" width="773" height="412"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -11,7 +11,7 @@
       <grid id="31191" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="7" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="10" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -201,26 +201,22 @@
           </grid>
         </children>
       </grid>
+      <component id="681fe" class="javax.swing.JLabel" binding="Title">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Cooper Black" size="26" style="0"/>
+          <text value="Advanced Tuition Centre"/>
+        </properties>
+      </component>
       <vspacer id="d9e5e">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="3" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <minimum-size width="-1" height="75"/>
           </grid>
         </constraints>
       </vspacer>
-      <component id="5bb0d" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="2" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <enabled value="true"/>
-          <font name="Berlin Sans FB Demi" size="26"/>
-          <horizontalAlignment value="11"/>
-          <horizontalTextPosition value="11"/>
-          <text value="Advanced Tuition Centre"/>
-          <verticalAlignment value="0"/>
-        </properties>
-      </component>
     </children>
   </grid>
 </form>
