--- a/frontend/Admin_UI.form
+++ b/frontend/Admin_UI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="AdminPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1126" height="2130"/>
+      <xy x="20" y="20" width="1126" height="2150"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -814,7 +814,7 @@
                       <text value="Total Income:"/>
                     </properties>
                   </component>
-                  <component id="5bf16" class="javax.swing.JLabel">
+                  <component id="5bf16" class="javax.swing.JLabel" binding="ShowTotalIncome">
                     <constraints>
                       <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -822,7 +822,7 @@
                       <text value="0"/>
                     </properties>
                   </component>
-                  <component id="53c6d" class="javax.swing.JLabel">
+                  <component id="53c6d" class="javax.swing.JLabel" binding="ShowIncomeOutstanding">
                     <constraints>
                       <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -854,7 +854,7 @@
                       <text value="Subject:"/>
                     </properties>
                   </component>
-                  <component id="53b73" class="javax.swing.JLabel">
+                  <component id="53b73" class="javax.swing.JLabel" binding="ShowIncomeSubject">
                     <constraints>
                       <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -862,7 +862,7 @@
                       <text value="---"/>
                     </properties>
                   </component>
-                  <component id="29cf1" class="javax.swing.JLabel">
+                  <component id="29cf1" class="javax.swing.JLabel" binding="ShowIncomeLevel">
                     <constraints>
                       <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -873,7 +873,7 @@
                   <hspacer id="af879">
                     <constraints>
                       <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="75" height="-1"/>
+                        <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
                   </hspacer>
@@ -892,7 +892,7 @@
                       <text value="Month:"/>
                     </properties>
                   </component>
-                  <component id="7fb44" class="javax.swing.JLabel">
+                  <component id="7fb44" class="javax.swing.JLabel" binding="ShowIncomeMonth">
                     <constraints>
                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -911,7 +911,7 @@
                   <text value="[Income Report]"/>
                 </properties>
               </component>
-              <grid id="7678c" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="7678c" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="3" column="1" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
@@ -921,15 +921,15 @@
                 <children>
                   <component id="47f55" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Month:"/>
                     </properties>
                   </component>
-                  <component id="59198" class="javax.swing.JComboBox">
+                  <component id="59198" class="javax.swing.JComboBox" binding="MonthComboBox">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <preferred-size width="100" height="-1"/>
                       </grid>
                     </constraints>
@@ -937,7 +937,7 @@
                   </component>
                   <component id="4e809" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Level:"/>
@@ -945,31 +945,31 @@
                   </component>
                   <component id="ef0b" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Subject"/>
                     </properties>
                   </component>
-                  <component id="a7888" class="javax.swing.JComboBox">
+                  <component id="a7888" class="javax.swing.JComboBox" binding="LevelComboBox">
                     <constraints>
-                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <preferred-size width="100" height="-1"/>
                       </grid>
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="bc694" class="javax.swing.JComboBox">
+                  <component id="bc694" class="javax.swing.JComboBox" binding="SubjectComboBox">
                     <constraints>
-                      <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
                         <preferred-size width="100" height="-1"/>
                       </grid>
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="2b6ab" class="javax.swing.JButton" default-binding="true">
+                  <component id="2b6ab" class="javax.swing.JButton" binding="ViewIncomeButton">
                     <constraints>
-                      <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="View"/>
@@ -977,7 +977,7 @@
                   </component>
                   <vspacer id="99d02">
                     <constraints>
-                      <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                      <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                         <preferred-size width="-1" height="15"/>
                       </grid>
                     </constraints>
@@ -987,14 +987,14 @@
               <hspacer id="699b3">
                 <constraints>
                   <grid row="3" column="0" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="75" height="-1"/>
+                    <preferred-size width="50" height="-1"/>
                   </grid>
                 </constraints>
               </hspacer>
               <hspacer id="51989">
                 <constraints>
                   <grid row="3" column="4" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="100" height="-1"/>
+                    <preferred-size width="50" height="-1"/>
                   </grid>
                 </constraints>
               </hspacer>
@@ -1008,7 +1008,7 @@
               <vspacer id="77708">
                 <constraints>
                   <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="250"/>
+                    <preferred-size width="-1" height="275"/>
                   </grid>
                 </constraints>
               </vspacer>
