--- a/frontend/Tutor_UI.form
+++ b/frontend/Tutor_UI.form
@@ -756,7 +756,7 @@
           </grid>
         </children>
       </grid>
-      <grid id="d4b3f" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d4b3f" binding="Student_Frame" layout-manager="GridLayoutManager" row-count="2" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -766,12 +766,12 @@
         <children>
           <scrollpane id="14cf2">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="7" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="d2e1b" class="javax.swing.JTable" binding="table1" default-binding="true">
+              <component id="d2e1b" class="javax.swing.JTable" binding="Student_Table">
                 <constraints/>
                 <properties/>
               </component>
@@ -780,7 +780,7 @@
           <grid id="fc56d" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -793,12 +793,12 @@
                   <text value="Class ID"/>
                 </properties>
               </component>
-              <component id="8688" class="javax.swing.JLabel">
+              <component id="8688" class="javax.swing.JLabel" binding="Student_Class_ID_Text">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <text value="class_id"/>
                 </properties>
               </component>
               <component id="cf2f5" class="javax.swing.JLabel">
@@ -809,16 +809,45 @@
                   <text value="Subject"/>
                 </properties>
               </component>
-              <component id="e4816" class="javax.swing.JLabel">
+              <component id="e4816" class="javax.swing.JLabel" binding="Student_Subject_Text">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <text value="Subject"/>
                 </properties>
               </component>
             </children>
           </grid>
+          <hspacer id="83af0">
+            <constraints>
+              <grid row="0" column="5" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="355" height="-1"/>
+              </grid>
+            </constraints>
+          </hspacer>
+          <hspacer id="250ba">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <hspacer id="e395c">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="b9675" class="javax.swing.JButton" binding="returnButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-65536"/>
+              <enabled value="true"/>
+              <foreground color="-1"/>
+              <hideActionText value="false"/>
+              <text value="Return "/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
