--- a/frontend/Receptionist_UI.form
+++ b/frontend/Receptionist_UI.form
@@ -386,7 +386,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="3ca56" binding="UpdateProfile" layout-manager="GridLayoutManager" row-count="9" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="3ca56" binding="UpdateProfile" layout-manager="GridLayoutManager" row-count="10" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
@@ -641,6 +641,13 @@
                   <text value="Edit"/>
                 </properties>
               </component>
+              <vspacer id="ed4e8">
+                <constraints>
+                  <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                    <preferred-size width="-1" height="25"/>
+                  </grid>
+                </constraints>
+              </vspacer>
             </children>
           </grid>
           <vspacer id="cbe9a">
